# sim2real-modular-RL-project

./: README.md
.spyproject/: workspace.ini
agents/: Base_Agent.py  Trainer.py
agents/DQN_agents/: DQN.py  DQN_HER.py
agents/actor_critic_agents/: DDPG.py  DDPG_HER.py
agents/baselines/baselines/: run_proxy_env.py
agents/baselines/baselines.egg-info/: PKG-INFO  SOURCES.txt
agents/baselines/baselines/deepq/: build_graph.py  deepq.py
environments/: ProxyEnv_simulation_side_template.py  proxy_gym_env.py
environments/j2n6s300/: DDPG_HER_env_Gazebo.py  DDPG_HER_env_tf.py  DQN_HER_env_tf_curr.py  HER_env_tf.py  proxy_env_gazebo_sim.py  task_env_tf.py
simulations/kinova/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
simulations/kinova/devel/lib/: libchomp_motion_planner.so.1.0.1  libchomp_planner_plugin.so.1.0.1  libcollision_detector_fcl_plugin.so.1.0.1  libmoveit_background_processing.so.1.0.1  libmoveit_exceptions.so.1.0.1  (+75 more)
simulations/kinova/src/: .rosinstall  .rosinstall.bak
simulations/kinova/src/collision_check/: CMakeLists.txt  package.xml
simulations/kinova/src/collision_check/src/: collision_check.cpp  planning_scene_tutorial.cpp
simulations/kinova/src/collision_check/srv/: CheckJointStateCollision.srv
simulations/universal_robot/devel/: .catkin  .rosinstall
training&execution/Bit_flipping/: Bit_Flipping.py
training&execution/Fetch_Reach/Data_and_Graphs/: 2019-09-21_15-52-46_jaco.pkl  2019-09-21_16-54-36_jaco.pkl  2019-09-21_18-43-36_jaco.pkl
training&execution/Fetch_Reach/Models/: DQN-HER_local_network.pt
training&execution/j2n6s300/: plot_results_from_pkl.py  train_j2n6s300_DDPG-HER.py  train_j2n6s300_DQN_Curr.py  train_j2n6s300_HER.py  train_j2n6s300_using_tf.py
training&execution/j2n6s300/Data_and_Graphs/: 2019-09-21_15-30-55_jaco.pkl  2019-09-21_15-31-27_jaco.pkl  2019-09-21_15-41-47_jaco.pkl  2019-09-21_22-12-32_jaco.pkl  2019-09-22_18-57-34_jaco.pkl  2019-09-23_19-34-35_jaco.pkl  2019-09-24_17-57-31_jaco.pkl  2019-09-25_15-13-19_jaco.pkl  2019-09-27_09-51-55_jaco.pkl  2019-09-27_10-05-24_jaco.pkl  2019-09-27_10-40-45_jaco.pkl  2019-09-27_11-14-48_jaco.pkl  2019-09-27_12-16-00_jaco.pkl  2019-09-27_16-58-30_jaco_DDPG-HER.pkl  2019-10-01_11-17-12_jaco.pkl  2019-10-01_11-23-21_jaco.pkl  2019-10-01_11-23-55_jaco.pkl  2019-10-01_11-31-26_jaco.pkl  2019-10-01_11-47-36_jaco.pkl  2019-10-01_12-12-27_jaco.pkl  2019-10-01_12-14-17_jaco.pkl  2019-10-01_12-15-07_jaco.pkl  2019-10-01_12-15-20_jaco.pkl  2019-10-01_12-15-49_jaco.pkl  2019-10-11_14-09-48_jaco.pkl  2019-10-11_14-10-03_jaco.pkl  2019-10-11_14-14-58_jaco.pkl  2019-10-11_20-53-56_jaco.pkl  2019-10-11_21-13-37_jaco.pkl  2019-10-11_21-17-04_jaco.pkl  2019-10-11_21-41-06_jaco.pkl  2019-10-11_22-26-37_jaco.pkl  2019-10-12_00-28-08_jaco.pkl  2019-10-12_02-14-33_jaco.pkl
training&execution/j2n6s300/Models/: 2019-09-27_10-40-45_model.pt  2019-09-27_12-16-00_model.pt  2019-10-01_11-17-12_model.pt  2019-10-01_11-23-21_model.pt  2019-10-01_11-23-55_model.pt  2019-10-01_11-31-26_model.pt  2019-10-01_11-47-36_model.pt  2019-10-01_12-12-27_model.pt  2019-10-01_12-14-17_model.pt  2019-10-01_12-15-07_model.pt  2019-10-01_12-15-20_model.pt  2019-10-01_12-15-49_model.pt  2019-10-11_14-09-48_model.pt  2019-10-11_14-10-03_model.pt  DQN_HER_demo40120_curr.pt  DQN_HER_demo_curr.pt  model.pt
utilities/: dynamic_graph_plot.py  joint_pos_2_tf.py  kinematics.py
utilities/data_structures/: Config.py
utilities/exploration_strategies/: Epsilon_Greedy_Exploration.py  OU_Noise_Exploration.py
(+2117 files in other folders)
